--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -1,63 +1,121 @@
+.gallery {
+    @include center;
+}
+
+@media (min-width: $tablet-width) {
     .gallery__section {
-        @include center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        @media (min-width: $desktop-width) {
+            grid-template-columns: 1fr 1fr 1fr;
+        }
     }
+    .gallery__item:first-child {
+        grid-column: 1/-1;
+    }
+}
 
+@media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.gallery__item {
+    line-height: 24px;
+    padding-top: 22px;
+    padding-bottom: 15px;
     @media (min-width: $tablet-width) {
-        .gallery__section {
-            padding: 0;
-            width: $tablet-width;
-            display: grid;
-            grid-template-columns: 1fr 324px 324px 324px;
-        }
-        .gallery__item:nth-child(1) {
-            grid-column: 1/-1;
-        }
+        padding: 0;
     }
+}
 
-    .gallery__item {
-        line-height: 24px;
-        padding-top: 22px;
-        padding-bottom: 15px;
-    }
-
-    .gallery__figure {
-        @include reset;
-    }
-
-    .gallery__img {
-        width: 280px;
-        height: 280px;
-    }
-
-    .gallery-figcaption {
-        @include reset;
-        font-weight: 700;
-        color: $black;
-    }
-
-    .gallery__autor {
-        @include reset;
-        text-transform: none;
-    }
-
-    .gallery__autor-name {
-        font-style: normal;
-    }
-
-    .gallery__like {
+.gallery__figure {
+    @include reset;
+    @media (min-width: $desktop-width) {
         position: relative;
-        @include reset;
-        font-weight: 700;
-        margin-top: 13px;
-        margin-left: 37px;
-        &::after {
-            content: "";
-            position: absolute;
-            width: 23px;
-            height: 21px;
-            top: -2px;
-            left: -37px;
-            background-image: url(../../img/icon-like.svg);
-            background-repeat: no-repeat;
+    }
+}
+
+.gallery__img {
+    display: block;
+    width: 280px;
+    height: 280px;
+    @media (min-width: $tablet-width) {
+        width: 324px;
+        height: 267px;
+    }
+    @media (min-width: $desktop-width) {
+        width: 400px;
+        height: 267px;
+    }
+}
+
+.gallery__item:first-child img {
+    @media (min-width: $tablet-width) {
+        width: 648px;
+        height: 400px;
+    }
+    @media (min-width: $desktop-width) {
+        width: 1200px;
+        height: 400px;
+    }
+}
+
+.gallery__figcaption {
+    @include reset;
+    font-weight: 700;
+    color: $black;
+    @media (min-width: $desktop-width) {
+        color: $white;
+    }
+}
+
+.gallery__autor {
+    @include reset;
+    text-transform: none;
+}
+
+.gallery__autor-name {
+    font-style: normal;
+}
+
+.gallery__like {
+    position: relative;
+    @include reset;
+    font-weight: 700;
+    margin-top: 13px;
+    margin-left: 37px;
+    &::after {
+        content: "";
+        position: absolute;
+        width: 23px;
+        height: 21px;
+        top: -2px;
+        left: -37px;
+        background-image: url(../../img/icon-like.svg);
+        background-repeat: no-repeat;
+        @media (min-width: $desktop-width) {
+            background-image: url(../../img/icon-like-desktop.svg);
         }
     }
+}
+
+.gallery__footer {
+    @media (min-width: $tablet-width) {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #EAEAEA;
+        padding-top: 11px;
+        padding-right: 20px;
+        padding-bottom: 15px;
+        padding-left: 20px;
+    }
+    @media (min-width: $desktop-width) {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        color: $white;
+        background-color: rgba(0, 0, 0, 0.3);
+        box-sizing: border-box;
+    }
+}
