--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,146 +1,154 @@
-.page-header {
-    position: relative;
-    margin: 0 auto;
-    @media (min-width: $tablet-width) {
-        min-width: $tablet-width;
-    }
-    @media (min-width: $desktop-width) {
-        min-width: $desktop-width;
-    }
-}
+            .page-header {
+                position: relative;
+                margin: 0 auto;
+                @media (min-width: $tablet-width) {
+                    min-width: $tablet-width;
+                }
+                @media (min-width: $desktop-width) {
+                    min-width: $desktop-width;
+                }
+            }
 
-.page-header__logo {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
-    @media (min-width: $tablet-width) {
-        z-index: 3;
-    }
-    @media (min-width: $desktop-width) {
-        width: 187px;
-        height: 97px;
-        text-align: center;
-        background-image: url(../../img/logo-bcg.png);
-    }
-}
+            .page-header__top {
+                position: relative;
+                display: flex;
+                width: 100%;
+                align-items: center;
+                justify-content: center;
+                margin-bottom: -35px;
+            }
 
-@media (min-width: $tablet-width) {
-    .main-nav__toggle {
-        display: none;
-    }
-}
+            .page-header__logo {
+                position: static;
+                transform: none;
+                left: 0;
+                top: 0;
+                z-index: 2;
+                @media (min-width: $tablet-width) {
+                    z-index: 3;
+                }
+                @media (min-width: $desktop-width) {
+                    width: 187px;
+                    height: 97px;
+                    text-align: center;
+                    background-image: url(../../img/logo-bcg.png);
+                }
+            }
 
-.header-content {
-    width: 100%;
-    background-image: url(../../img/bcg-header-mobile.png);
-    background-repeat: no-repeat;
-    clip-path: polygon(0 0, 100% 0, 100% 93%, 50% 99%, 0 93%);
-    margin: 0 auto;
-    padding-bottom: 85px;
-    @media (min-resolution: 2dppx) {
-        background-image: url(../../img/bcg-header-mobile@2x.png);
-    }
-}
+            @media (min-width: $tablet-width) {
+                .main-nav__toggle {
+                    display: none;
+                }
+            }
 
-.header-content__img {
-    display: block;
-    margin: 0 auto;
-}
+            .header-content {
+                width: 100%;
+                background-image: url(../../img/bcg-header-mobile.png);
+                background-repeat: no-repeat;
+                clip-path: polygon(0 0, 100% 0, 100% 93%, 50% 99%, 0 93%);
+                margin: 0 auto;
+                padding-bottom: 85px;
+                @media (min-resolution: 2dppx) {
+                    background-image: url(../../img/bcg-header-mobile@2x.png);
+                }
+            }
 
-.header-content__line1 {
-    padding-top: 90px;
-    margin-bottom: 7px;
-}
+            .header-content__img {
+                display: block;
+                margin: 0 auto;
+            }
 
-.header-content__line2 {
-    margin-bottom: 32px;
-}
+            .header-content__line1 {
+                padding-top: 90px;
+                margin-bottom: 7px;
+            }
 
-.header-content__line3 {
-    margin-bottom: 37px;
-}
+            .header-content__line2 {
+                margin-bottom: 32px;
+            }
 
-@media (min-width: $tablet-width) {
-    .header-content {
-        background-image: url(../../img/bcg-header-tablet.png);
-        background-repeat: no-repeat;
-        margin-top: 8px;
-        padding-bottom: 130px;
-        @media (min-resolution: 2dppx) {
-            background-image: url(../../img/bcg-header-tablet@2x.png);
-            background-size: 768px auto;
-        }
-    }
-    .header-content__line1 {
-        width: 188px;
-        height: 45px;
-    }
-    .header-content__line2 {
-        width: 175px;
-        height: 29px;
-    }
-    .header-content__line3 {
-        width: 461px;
-        height: 80px;
-    }
-    .header-content__line4 {
-        width: 283px;
-        height: 75px;
-    }
-}
+            .header-content__line3 {
+                margin-bottom: 37px;
+            }
 
-@media (min-width: $desktop-width) {
-    .header-content {
-        background-image: url(../../img/bcg-header-desktop.png);
-        background-repeat: no-repeat;
-        margin-top: 8px;
-    }
-    @media (min-resolution: 2dppx) {
-        background-image: url(../../img/bcg-header-desktop@2x.png);
-        background-size: 768px auto;
-    }
-}
+            @media (min-width: $tablet-width) {
+                .header-content {
+                    background-image: url(../../img/bcg-header-tablet.png);
+                    background-repeat: no-repeat;
+                    padding-bottom: 130px;
+                    @media (min-resolution: 2dppx) {
+                        background-image: url(../../img/bcg-header-tablet@2x.png);
+                        background-size: 768px auto;
+                    }
+                }
+                .header-content__line1 {
+                    width: 188px;
+                    height: 45px;
+                }
+                .header-content__line2 {
+                    width: 175px;
+                    height: 29px;
+                }
+                .header-content__line3 {
+                    width: 461px;
+                    height: 80px;
+                }
+                .header-content__line4 {
+                    width: 283px;
+                    height: 75px;
+                }
+            }
 
-.header-content__inner {
-    min-height: 130px;
-    background: url(../../img/bcg-header-mobile-inner.png);
-    background-repeat: no-repeat;
-    @media (min-resolution: 2dppx) {
-        background-image: url(../../img/bcg-header-mobile-inner@2x.png);
-        background-size: 320px;
-    }
-    @media (min-width: $tablet-width) {
-        min-width: $tablet-width;
-        min-height: 216px;
-        background-image: url(../../img/bcg-header-tablet-inner.png);
-        clip-path: none;
-        @media (min-resolution: 2dppx) {
-            background-image: url(../../img/bcg-header-tablet-inner@2x.png);
-        }
-    }
-    @media (min-width: $desktop-width) {
-        min-height: 227px;
-        background-image: url(../../img/bcg-header-desktop-inner.png);
-        @media (min-resolution: 2dppx) {
-            background-image: url(../../img/bcg-header-desktop-inner@2x.png);
-        }
-    }
-}
+            @media (min-width: $desktop-width) {
+                .header-content {
+                    background-image: url(../../img/bcg-header-desktop.png);
+                    background-repeat: no-repeat;
+                    margin-top: 8px;
+                }
+                @media (min-resolution: 2dppx) {
+                    background-image: url(../../img/bcg-header-desktop@2x.png);
+                    background-size: 768px auto;
+                }
+            }
 
-.header-content__inner-img {
-    display: block;
-    margin: 0 auto;
-    padding-top: 52px;
-    @media (min-width: $tablet-width) {
-        width: 457px;
-        height: 78px;
-        padding-top: 95px;
-    }
-    @media (min-width: $desktop-width) {
-        width: 460px;
-        height: 80px;
-        padding-top: 101px;
-    }
-}
+            .header-inner {
+                min-height: 130px;
+                background: url(../../img/bcg-header-mobile-inner.png);
+                background-repeat: no-repeat;
+                @media (min-resolution: 2dppx) {
+                    background-image: url(../../img/bcg-header-mobile-inner@2x.png);
+                    background-size: 320px;
+                }
+                @media (min-width: $tablet-width) {
+                    min-width: $tablet-width;
+                    min-height: 216px;
+                    background-image: url(../../img/bcg-header-tablet-inner.png);
+                    clip-path: none;
+                    @media (min-resolution: 2dppx) {
+                        background-image: url(../../img/bcg-header-tablet-inner@2x.png);
+                    }
+                }
+                @media (min-width: $desktop-width) {
+                    min-height: 227px;
+                    background-image: url(../../img/bcg-header-desktop-inner.png);
+                    @media (min-resolution: 2dppx) {
+                        background-image: url(../../img/bcg-header-desktop-inner@2x.png);
+                    }
+                }
+            }
+
+            .header-inner__img {
+                display: block;
+                margin: 0 auto;
+                padding-top: 52px;
+                @media (min-width: $tablet-width) {
+                    width: 457px;
+                    height: 78px;
+                    padding-top: 95px;
+                }
+                @media (min-width: $desktop-width) {
+                    width: 460px;
+                    height: 80px;
+                    padding-top: 101px;
+                }
+            }
