--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -10,9 +10,17 @@
 
     .inner-main {
         line-height: 24px;
+        @media (min-width: $tablet-width) {
+            width: 648px;
+            padding: 0 60px;
+        }
+        @media (min-width: $desktop-width) {
+            width: 1200px;
+            padding: 0;
+        }
     }
 
-    .page-main__header {
+    .main-header {
         @include center;
         margin-bottom: 27px;
         @media (min-width: $tablet-width) {
@@ -23,18 +31,49 @@
         }
     }
 
-    .inner-main .page-main__header {
+    .form-main .main-header {
+        margin: 0 auto;
+        padding-bottom: 16px;
+        border-bottom: 1px solid #E5E5E5;
+        @media (min-width: $tablet-width) {
+            border-bottom: none;
+            margin-bottom: 60px;
+        }
+    }
+
+    .inner-main .main-header {
+        width: auto;
+        padding: 0;
+        @media (min-width: $tablet-width) {
+            margin-bottom: 64px;
+        }
+    }
+
+    .inner-main .main-header {
         @media (min-width: $tablet-width) {
             width: 435px;
         }
     }
 
-    .page-main__header-text {
+    .main-header__text {
         @include reset;
         text-align: center;
+        @media (max-width: $mobile-widht-only) {
+            br {
+                display: none;
+            }
+        }
     }
 
-    .page-main__header-heading {
+    .inner-main .main-header__text {
+        @include center;
+        @media (min-width: $tablet-width) {
+            width: auto;
+            padding: 0;
+        }
+    }
+
+    .main-header__heading {
         width: 260px;
         @include reset;
         font-size: 18px;
@@ -46,5 +85,11 @@
         @media (min-width: $tablet-width) {
             width: inherit;
             font-size: 21px;
+        }
+    }
+
+    .page__body-inner .main-header__heading {
+        @media (min-width: $tablet-width) {
+            font-size: 30px;
         }
     }
