--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -12,4 +12,14 @@
     display: block;
     color: $white;
     background-color: #81B3D2;
+    &:hover,
+    &:focus {
+        background-color: #669EC0;
+    }
+    &:active {
+        color: rgba(255, 255, 255, 0.3);
+    }
+    &:disabled {
+        background-color: #E5E5E5;
+    }
 }
