--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,10 +1,10 @@
     .page-main {
-        margin-top: 24px;
+        margin-top: 31px;
         @media (min-width: $tablet-width) {
-            margin-top: 59px;
+            margin-top: 4px;
         }
         @media (min-width: $desktop-width) {
-            margin-top: 91px;
+            margin-top: 16px;
         }
     }
 
@@ -22,12 +22,16 @@
 
     .main-header {
         @include center;
-        margin-bottom: 27px;
+        margin-bottom: 32px;
         @media (min-width: $tablet-width) {
             width: 490px;
             padding: 0;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 55px;
+        }
+        @media (min-width: $desktop-width) {
+            margin-bottom: 42px;
         }
     }
 
@@ -88,7 +92,7 @@
         }
     }
 
-    .page__body-inner .main-header__heading {
+    .page-inner .main-header__heading {
         @media (min-width: $tablet-width) {
             font-size: 30px;
         }
