--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -481,6 +481,7 @@
             width: 100%;
             order: 6;
             margin-bottom: 61px;
+            padding-right: 11px;
         }
         @media (min-width: $desktop-width) {
             margin-bottom: 62px;
